--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.74",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "dexie": "^2.0.0",
     "moment": "^2.18.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
